add agent generic type support (#11)
* add agent generic type support

* fixbug